2004-01-30 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/tests/libmullong.c: fixed for 64 bit hosts

2004-01-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (getRegPtr, getRegGpr),
	* src/ds390/ralloc.c (getRegPtr, getRegGpr),
	* src/pic/ralloc.c (getRegPtr, getRegGpr),
	* src/pic16/ralloc.c (getRegPtr, getRegGpr),
	* src/z80/ralloc.c (getRegGpr): fixed bug #883361
	* as/mcs51/asexpr.c (term),
	* as/hc08/asexpr.c (term): fixed bug #887146

2004-01-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/gen.c (genMult): handle single byte result product
	* src/SDCCopt.c (killDeadCode): never convert ADDRESS_OF iCode to
	DUMMY_READ_VOLATILE (fixed bug #886367)

2004-01-27 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/tests/libmullong.c: fixed logic, on little endian
	hosts we ended without a mullong_wrapper()

2004-01-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* ChangeLog: changed "@" to " AT " in hopes of reducing spam and
	virus/worm forged address usage.

2004-01-27 Bernhard Held <bernhard AT bernhardheld.de>

	Fixed promotion, it should be done on AST level:
	* src/SDCCast.c (addCast): added promotion to int
	(decorateType): updated call to upCast()
	* src/SDCCicode.c (geniCodeLeftShift): removed call to
	usualUnaryConversions()

2004-01-26  Michael Hope  <michaelh AT juju.net.nz>

	* support/regression/tests/literalop.c (mulWrapper): Added a
	wrapper to remove integer overflow warnings.

	* support/regression/tests/float_trans.c: Made work on host.

	* support/regression/ports/ucz80/spec.mk (UCZ80): Made detect the
	location of sz80.

	* support/regression/generate-cases.py (main): Changed from inline
	to a main method.

	* doc/Makefile (install): Changed to depth first to get rid of
	missing directory install warning.

	* as/Makefile (install-doc): Made work on Mac.

2004-01-25 Bernhard Held <bernhard AT bernhardheld.de>
